modificacion de carpetas

--- a/src/TodoList/TodoList.css
+++ b/src/TodoList/TodoList.css
@@ -1,5 +1,10 @@
 ul{
     margin:0;
     padding:0 0 56px;
-    list-style:none
+    list-style:none;
+    
+}
+
+section{
+    padding-bottom: 55px;
 }
