--- a/src/CreateTodoButton/CreateTodoButton.css
+++ b/src/CreateTodoButton/CreateTodoButton.css
@@ -1,7 +1,7 @@
 .CreateTodoButton{
-    background-color:#61dafa;
-    box-shadow:0 5px 25px rgba(97,218,250,.5)
-    ;border:none;
+    background-color:rgb(97, 218, 250);
+    box-shadow:0 5px 25px rgba(97,218,250,.5);
+    border:none;
     border-radius:50%;
     cursor:pointer;
     font-size:50px;
@@ -9,7 +9,7 @@
     bottom:24px;
     right:24px;
     font-weight:700;
-    color:#fafafa;
+    color:rgb(250, 250, 250);
     display:flex;
     justify-content:center;
     align-items:center;
@@ -23,4 +23,5 @@
 .CreateTodoButton:hover{
     transform:rotate(224deg);
     background-color: rgb(245, 33, 33);
+    box-shadow: 0 5px 25px rgb(143, 4, 4);
 }
